--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 </head>
 <body>
-    <amp-h1 layout="reponsive">cong ty in chat luong cao</amp-h1>
-    <amp-p layout="reponsive">cong ty co kinh nghiem trong linh vuc in an thiet ke voi thu vien in an khong lo</amp-p>
-    <amp-img src="welcome.jpg" alt="Welcome" height="400" width="800"></amp-img>
+    <h1>cong ty in chat luong cao</h1>
+    <p>cong ty co kinh nghiem trong linh vuc in an thiet ke voi thu vien in an khong lo</p>
+    <amp-img src="welcome.jpg" alt="Welcome" height="400" width="800" layout="responsive"></amp-img>
     <amp-img src="responsive.jpg" width="527" height="193" layout="responsive">
     </amp-img>
     <amp-img  width="400" height="300" src="my-gif.gif" layout="responsive">
