quy trinh khep kin

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <title>Thu vien in an chat luong cao</title>
-    <meta name="description" content="cong ty thiet ke thu vien in an">
+    <title>Thu vien in an chat luong cao quy trinh khep kin</title>
+    <meta name="description" content="cong ty thiet ke thu vien in an voi quy trinh khep kin">
     <link rel="canonical" href="http://example.ampproject.org/article-metadata.html"/>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script type="application/ld+json">
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h1>cong ty in chat luong cao</h1>
-    <p>cong ty co kinh nghiem trong linh vuc in an thiet ke voi thu vien in an khong lo</p>
+    <p>cong ty co kinh nghiem trong linh vuc in an thiet ke voi thu vien in an khong lo quy trinh khep kin</p>
     <amp-img src="welcome.jpg" alt="Welcome" height="400" width="800" layout="responsive"></amp-img>
     <amp-img src="responsive.jpg" width="527" height="193" layout="responsive">
     </amp-img>
